[package]
name = "deno_rwasm_json"
description = "WASM bindings to json"
license = "MIT"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Patrik64/deno_rwasm_json"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"
web-sys = { version = "0.3", features = ["console"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"

[profile.release]
lto = true
opt-level = "z"
